-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b64
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082654 | emb-9 | Roland Westrelin | P2 | Resolved | Fixed | team |
...
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\\opto/node.hpp:757
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\\jprt\\T\\P1\\150345.amurillo\\s\\hotspot\\src\\share\\vm\\opto/node.hpp:757), pid=10580, tid=135676
# assert(is_Initialize()) failed: invalid node class
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150306150345.amurillo.jdk9-hs-2015-03--b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-20150306150345.amurillo.jdk9-hs-2015-03--b00 compiled mode windows-amd64 compressed oops)
# Core dump written. Default location: C:\\local\\aurora\\sandbox\\results\\workDir\\java\\lang\\invoke\\PermuteArgsTest\\hs_err_pid10580.mdmp
#
# An error report file with more information is saved as:
# C:\\local\\aurora\\sandbox\\results\\workDir\\java\\lang\\invoke\\PermuteArgsTest\\hs_err_pid10580.log
#
# Compiler replay data is saved as:
# C:\\local\\aurora\\sandbox\\results\\workDir\\java\\lang\\invoke\\PermuteArgsTest\\replay_pid10580.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
...
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\\opto/node.hpp:757
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\\jprt\\T\\P1\\150345.amurillo\\s\\hotspot\\src\\share\\vm\\opto/node.hpp:757), pid=10580, tid=135676
# assert(is_Initialize()) failed: invalid node class
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150306150345.amurillo.jdk9-hs-2015-03--b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-20150306150345.amurillo.jdk9-hs-2015-03--b00 compiled mode windows-amd64 compressed oops)
# Core dump written. Default location: C:\\local\\aurora\\sandbox\\results\\workDir\\java\\lang\\invoke\\PermuteArgsTest\\hs_err_pid10580.mdmp
#
# An error report file with more information is saved as:
# C:\\local\\aurora\\sandbox\\results\\workDir\\java\\lang\\invoke\\PermuteArgsTest\\hs_err_pid10580.log
#
# Compiler replay data is saved as:
# C:\\local\\aurora\\sandbox\\results\\workDir\\java\\lang\\invoke\\PermuteArgsTest\\replay_pid10580.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
...
- backported by
-
JDK-8082654 java.lang.invoke.PermuteArgsTest.java fails with "assert(is_Initialize()) failed: invalid node class"
-
- Resolved
-