8074676: java.lang.invoke.PermuteArgsTest.java fails with "assert(is_Initialize()) failed: invalid node class"

After guards in Arrays.copyOf() intrinsic, control may become top

Reviewed-by: kvn, vlivanov